--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 appnope==0.1.4
 asttokens==3.0.0
+beautifulsoup4==4.13.4
 blis==1.3.0
 catalogue==2.0.10
 certifi==2025.1.31
@@ -28,6 +29,7 @@ joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 langcodes==3.5.0
+langdetect==1.0.9
 language_data==1.3.0
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
@@ -68,6 +70,7 @@ seqeval==1.2.2
 shellingham==1.5.4
 six==1.17.0
 smart-open==7.1.0
+soupsieve==2.6
 spacy==3.8.5
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
